# A-Normal-Chess-Game---IMAC

./: .gitignore  CMakeLists.txt  CPP_CODEBASE_REPORT.md  README.md
assets/config/: game_params.json  master_config.json
src/: main.cpp
src/Assets/: AssetManager.cpp  AssetManager.hpp
src/Autonomous/: AutonomousUnit.hpp  AutonomousUnitType.hpp
src/Board/: Board.cpp  Board.hpp  BoardGenerator.cpp  BoardGenerator.hpp  Cell.hpp  CellTraversal.cpp  CellTraversal.hpp  CellType.hpp
src/Buildings/: Building.cpp  Building.hpp  BuildingFactory.cpp  BuildingFactory.hpp  BuildingType.hpp  StructureChunkRegistry.cpp  StructureChunkRegistry.hpp  StructurePlacementProfile.cpp  StructurePlacementProfile.hpp
src/Config/: GameConfig.cpp  GameConfig.hpp
src/Core/: Game.cpp  Game.hpp  GameClock.cpp  GameClock.hpp  GameEngine.cpp  GameEngine.hpp  GameSessionConfig.hpp  GameState.hpp  GameStateValidator.cpp  GameStateValidator.hpp  GameplayNotification.hpp  InteractionPermissions.cpp  InteractionPermissions.hpp  LiveResizeRenderWindow.hpp  LocalPlayerContext.hpp  MacOSTrackpadAdapter.hpp  MacOSTrackpadAdapter.mm  ToolState.hpp  TurnDraft.cpp  TurnDraft.hpp  TurnPhase.hpp
src/Debug/: GameStateDebugRecorder.cpp  GameStateDebugRecorder.hpp
src/Input/: InputContext.hpp  InputHandler.cpp  InputHandler.hpp  InputSelectionBookmark.hpp  LayeredSelection.cpp  LayeredSelection.hpp  ToolState.hpp
src/Kingdom/: Kingdom.cpp  Kingdom.hpp  KingdomId.hpp
src/Multiplayer/: MultiplayerClient.cpp  MultiplayerClient.hpp  MultiplayerRuntime.cpp  MultiplayerRuntime.hpp  MultiplayerServer.cpp  MultiplayerServer.hpp  PasswordUtils.hpp  Protocol.cpp  Protocol.hpp
src/Objects/: MapObject.hpp  MapObjectType.hpp
src/Projection/: ForwardModel.cpp  ForwardModel.hpp  GameSnapshot.hpp  ThreatMap.hpp
src/Render/: Camera.cpp  Camera.hpp  OverlayRenderer.cpp  OverlayRenderer.hpp  Renderer.cpp  Renderer.hpp  StructureOverlay.cpp  StructureOverlay.hpp
src/Runtime/: BuildOverlayCoordinator.cpp  BuildOverlayCoordinator.hpp  FrontendCoordinator.cpp  FrontendCoordinator.hpp  InGamePresentationCoordinator.cpp  InGamePresentationCoordinator.hpp  InputCoordinator.cpp  InputCoordinator.hpp  InteractivePermissionsCache.hpp  MultiplayerEventCoordinator.cpp  MultiplayerEventCoordinator.hpp  MultiplayerJoinCoordinator.cpp  MultiplayerJoinCoordinator.hpp  MultiplayerRuntimeCoordinator.cpp  MultiplayerRuntimeCoordinator.hpp  PanelActionCoordinator.cpp  PanelActionCoordinator.hpp  PendingTurnValidationCache.hpp  RenderCoordinator.cpp  RenderCoordinator.hpp  SelectionQueryCoordinator.cpp  SelectionQueryCoordinator.hpp  SessionFlow.cpp  SessionFlow.hpp  SessionPresentationCoordinator.cpp  SessionPresentationCoordinator.hpp  SessionRuntimeCoordinator.cpp  SessionRuntimeCoordinator.hpp  TurnCoordinator.cpp  TurnCoordinator.hpp  TurnDraftCoordinator.cpp  TurnDraftCoordinator.hpp  TurnLifecycleCoordinator.cpp  TurnLifecycleCoordinator.hpp  UICallbackBinder.cpp  UICallbackBinder.hpp  UICallbackCoordinator.cpp  UICallbackCoordinator.hpp  UpdateCoordinator.cpp  UpdateCoordinator.hpp  (+2 more)
src/Save/: SaveData.hpp  SaveManager.cpp  SaveManager.hpp
src/Systems/: BuildOverlayRules.hpp  BuildReachRules.cpp  BuildReachRules.hpp  BuildSystem.cpp  BuildSystem.hpp  CheckResponseRules.cpp  CheckResponseRules.hpp  CheckSystem.cpp  CheckSystem.hpp  ChestSystem.cpp  ChestSystem.hpp  CombatSystem.cpp  CombatSystem.hpp  EconomySystem.cpp  EconomySystem.hpp  EventLog.cpp  EventLog.hpp  FormationSystem.cpp  FormationSystem.hpp  InfernalSystem.cpp  InfernalSystem.hpp  MarriageSystem.cpp  MarriageSystem.hpp  PendingTurnProjection.cpp  PendingTurnProjection.hpp  ProductionSpawnRules.cpp  ProductionSpawnRules.hpp  ProductionSystem.cpp  ProductionSystem.hpp  PublicBuildingOccupation.cpp  PublicBuildingOccupation.hpp  SelectionMoveRules.cpp  SelectionMoveRules.hpp  StructureIntegrityRules.cpp  StructureIntegrityRules.hpp  TurnCommand.hpp  TurnPointRules.cpp  TurnPointRules.hpp  TurnSystem.cpp  TurnSystem.hpp  (+7 more)
src/UI/: ActionButtonStyle.hpp  BarracksPanel.cpp  BarracksPanel.hpp  BuildToolPanel.cpp  BuildToolPanel.hpp  BuildingPanel.cpp  BuildingPanel.hpp  CellPanel.cpp  CellPanel.hpp  EventLogPanel.cpp  EventLogPanel.hpp  FocusStyle.hpp  GameMenuUI.cpp  GameMenuUI.hpp  HUD.cpp  HUD.hpp  HUDLayout.hpp  InGameViewModel.hpp  InGameViewModelBuilder.cpp  InGameViewModelBuilder.hpp  KingdomBalancePanel.cpp  KingdomBalancePanel.hpp  MainMenuUI.cpp  MainMenuUI.hpp  MapObjectPanel.cpp  MapObjectPanel.hpp  PiecePanel.cpp  PiecePanel.hpp  PlannedActionsPanel.cpp  PlannedActionsPanel.hpp  ToolBar.cpp  ToolBar.hpp  UIManager.cpp  UIManager.hpp
src/Units/: MovementRules.cpp  MovementRules.hpp  Piece.cpp  Piece.hpp  PieceFactory.cpp  PieceFactory.hpp  PieceType.hpp
